[gd_scene load_steps=2 format=2]

[ext_resource path="res://guis/physicspanel.gd" type="Script" id=1]

[node name="gui" type="Control"]
margin_right = 250.0
margin_bottom = 500.0
rect_min_size = Vector2( 250, 500 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 250.0
margin_bottom = 500.0
rect_min_size = Vector2( 250, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="headerRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 20 )
color = Color( 0.25098, 0.270588, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/headerRect"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 20 )
text = "RigidBody"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="general" type="ColorRect" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 224.0
rect_min_size = Vector2( 250, 200 )
color = Color( 0.14902, 0.172549, 0.231373, 1 )

[node name="gravityscale" type="Label" parent="VBoxContainer/general"]
margin_left = 4.4545
margin_top = 4.89995
margin_right = 86.4545
margin_bottom = 18.8999
text = "Gravity Scale:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gravityone" type="Button" parent="VBoxContainer/general"]
margin_left = 97.9989
margin_top = 23.6088
margin_right = 137.999
margin_bottom = 63.6088
rect_min_size = Vector2( 40, 40 )
action_mode = 0
button_mask = 7
text = "-0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gravitytwo" type="Button" parent="VBoxContainer/general"]
margin_left = 97.9989
margin_top = 63.6088
margin_right = 137.999
margin_bottom = 103.609
rect_min_size = Vector2( 40, 40 )
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gravitythree" type="Button" parent="VBoxContainer/general"]
margin_left = 97.9989
margin_top = 103.609
margin_right = 137.999
margin_bottom = 143.609
rect_min_size = Vector2( 40, 40 )
text = "0.5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gravityfour" type="Button" parent="VBoxContainer/general"]
margin_left = 97.9989
margin_top = 143.609
margin_right = 137.999
margin_bottom = 183.609
rect_min_size = Vector2( 40, 40 )
text = "1.0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/general/gravityone" to="." method="_on_gravityone_pressed"]
[connection signal="pressed" from="VBoxContainer/general/gravitytwo" to="." method="_on_gravitytwo_pressed"]
[connection signal="pressed" from="VBoxContainer/general/gravitythree" to="." method="_on_gravitythree_pressed"]
[connection signal="button_up" from="VBoxContainer/general/gravityfour" to="." method="_on_gravityfour_button_up"]
